fix odd spacing on horz responsive grid

--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,10 @@ input#edit-submit-contact--2 {
     display: none;
 }
 
+.views-view-responsive-grid.views-view-responsive-grid--horizontal {
+    margin-bottom: 1rem;
+}
+
 /* Media Queries */
 
 @media (min-width: 36em) {
